; ModuleID = '/home/carl/AnghaBench/timescaledb/src/bgw/extr_job.c_bgw_job_tuple_delete.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/bgw/extr_job.c_bgw_job_tuple_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_5__ = type { i32 }

@SCAN_CONTINUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i8*)* @bgw_job_tuple_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bgw_job_tuple_delete(%struct.TYPE_4__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @GETSTRUCT(i32 %9)
  %11 = inttoptr i64 %10 to %struct.TYPE_5__*
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @ts_bgw_job_stat_delete(i32 %14)
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @ts_bgw_policy_reorder_delete_row_only_by_job_id(i32 %16)
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @ts_bgw_policy_drop_chunks_delete_row_only_by_job_id(i32 %18)
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @ts_bgw_policy_chunk_stats_delete_row_only_by_job_id(i32 %20)
  %22 = call i32 (...) @ts_catalog_database_info_get()
  %23 = call i32 @ts_catalog_database_info_become_owner(i32 %22, i32* %5)
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @ts_catalog_delete(i32 %26, i32 %29)
  %31 = call i32 @ts_catalog_restore_user(i32* %5)
  %32 = load i32, i32* @SCAN_CONTINUE, align 4
  ret i32 %32
}

declare dso_local i64 @GETSTRUCT(i32) #1

declare dso_local i32 @ts_bgw_job_stat_delete(i32) #1

declare dso_local i32 @ts_bgw_policy_reorder_delete_row_only_by_job_id(i32) #1

declare dso_local i32 @ts_bgw_policy_drop_chunks_delete_row_only_by_job_id(i32) #1

declare dso_local i32 @ts_bgw_policy_chunk_stats_delete_row_only_by_job_id(i32) #1

declare dso_local i32 @ts_catalog_database_info_become_owner(i32, i32*) #1

declare dso_local i32 @ts_catalog_database_info_get(...) #1

declare dso_local i32 @ts_catalog_delete(i32, i32) #1

declare dso_local i32 @ts_catalog_restore_user(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
